// Generated by j5build v0.0.0-20250407052915-b2fc017d8ac2. DO NOT EDIT

syntax = "proto3";

package o5.trigger.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/messaging/v1/annotations.proto";
import "j5/messaging/v1/reqres.proto";
import "j5/state/v1/metadata.proto";
import "o5/trigger/v1/trigger.j5s.proto";

service TriggerPublishTopic {
  option (j5.messaging.v1.service) = {
    topic_name: "trigger_publish"
    event: {
      entity_name: "o5.trigger.v1.Trigger"
    }
  };

  rpc TriggerEvent(TriggerEventMessage) returns (google.protobuf.Empty) {}
}

service TickRequestTopic {
  option (j5.messaging.v1.service) = {
    topic_name: "tick"
    request: {
    }
  };

  rpc TickRequest(TickRequestMessage) returns (google.protobuf.Empty) {}
}

service TickReplyTopic {
  option (j5.messaging.v1.service) = {
    topic_name: "tick"
    reply: {
    }
  };

  rpc TickReply(TickReplyMessage) returns (google.protobuf.Empty) {}
}

message TriggerEventMessage {
  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventPublishMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  o5.trigger.v1.TriggerKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  o5.trigger.v1.TriggerEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {}
  ];

  o5.trigger.v1.TriggerData data = 4 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  o5.trigger.v1.TriggerStatus status = 5 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {}
  ];
}

message TickRequestMessage {
  option (j5.ext.v1.message).object = {};

  j5.messaging.v1.RequestMetadata request = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  o5.trigger.v1.ActionType action = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {}
  ];
}

message TickReplyMessage {
  option (j5.ext.v1.message).object = {};

  j5.messaging.v1.RequestMetadata request = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  // The time the trigger is for
  google.protobuf.Timestamp tick_time = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {}
  ];
}
